fix: remove horizontal scrolling

--- a/online-zoo-week1/sass/components/_logo.scss
+++ b/online-zoo-week1/sass/components/_logo.scss
@@ -1,7 +1,6 @@
 .logo {
     width: 5rem;
     height: 3rem;
-    margin-left: 14rem;
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
