--- a/online-zoo-week1/sass/layout/_container.scss
+++ b/online-zoo-week1/sass/layout/_container.scss
@@ -1,5 +1,10 @@
 .container {
-    max-width: $content-width;
+    //width: 100%;
+    //height: 100%;
+    //max-width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+
 
 
 }
