--- a/online-zoo-week1/sass/layout/_header.scss
+++ b/online-zoo-week1/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 /* header start */
 
 .header {
-    max-width: $content-width;
+    // max-width: $content-width;
     margin: auto;
     display: flex;
     flex-direction: row;
@@ -19,7 +19,7 @@ header div {
 .nav__link {
     @include header-font;
     text-decoration: none;
-    margin-right: 1.875em;
+    margin-left: 1.875em;
     flex-shrink: 0;
 
 }
@@ -50,14 +50,10 @@ header div {
     justify-content: center;
     align-items: baseline;
     list-style: none;
-
-
-
 }
 
 .menu__box li {
     flex-shrink: 0;
-
 }
 
 #menu__toggle {
