--- a/online-zoo-week1/sass/layout/_wrapper.scss
+++ b/online-zoo-week1/sass/layout/_wrapper.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    max-width: $content-width;
-    margin: auto;
+    // max-width: $content-width;
+    //margin: auto;
 
 }
